# hm2

./: Animated.hs  BLP.hs  FileSystem.hs  M2Model.hs  Matrix.hs  ModelDef.hs  Quaternion.hs  README.md  Resource.hs  Utils.hs  hm2.cabal  stack.yaml  test.hs  test2  test2.hs  test3  test3.hs
Data/WOW/: Animated.hs  BLP.hs  Bone.hs  Creature.hs  DBC.hs  DBCTemplate.hs  FileSystem.hs  M2Model.hs  Matrix.hs  ModelDef.hs  Quaternion.hs  Resource.hs  Skin.hs  Utils.hs  World.hs  World.hs-boot  WorldTemplate.hs
Data/WOW/GL/: Mesh.hs  Resource.hs  ResourceLoader.hs  Texture.hs  Types.hs
GL/: Mesh.hs  Resource.hs  ResourceLoader.hs  Texture.hs  Types.hs
