Name:                hm2
Version:             0.0.0
Synopsis:            wow model viewer
Description:         a rewritten of wowmodelviewer in haskell
License:             BSD3
License-file:        LICENSE
Copyright:           (c) 2009 Pierric Wu
Author:              Pierric Wu
Maintainer:          w (dot) pierric (at) gmail (dot) com
Homepage:            http://nonrecursive.org
Stability:           Experimental
Category:            Graphics, Data
Tested-With:         GHC == 6.10.4
Cabal-Version:       >= 1.2
Build-Type:          Simple


--Library
--  Build-Depends:       base, bytestring
--  Exposed-Modules:     
--  Extensions:          ForeignFunctionInterface
--  ghc-options:         -Wall
--  C-Sources:           cbits/ddslib.c 
--  Include-Dirs:        cbits  

Executable test3
  main-is:             test3.hs
  build-depends:       base, array, containers, bytestring, monads-fd, transformers, filepath, binary, data-binary-ieee754, fclabels, Tensor, vector-space, pcre-light, OpenGL, OpenGLRaw, GLUT, GLURaw, template-haskell, stb-image == 0.1.3, gtk, gtkglext, MaybeT, hdds

Executable test2
  main-is:             test2.hs
  build-depends:       base==3.0.3.1, array==0.2.0.0, containers==0.2.0.1, bytestring==0.9.1.4, gd==3000.4.0, Tensor==1.0.0.1, vector-space==0.5.7, binary==0.5.0.2, data-binary-ieee754==0.4, monads-fd==0.0.0.1, transformers==0.1.4.0, fclabels==0.4.1, template-haskell, filepath==1.1.0.2, pcre-light==0.3.1,stb-image==0.1.3, hdds


