Name:                hm2
Version:             0.0.0
Synopsis:            wow model viewer
Description:         a rewritten of wowmodelviewer in haskell
License:             BSD3
License-file:        LICENSE
Copyright:           (c) 2009 Pierric Wu
Author:              Pierric Wu
Maintainer:          w (dot) pierric (at) gmail (dot) com
Homepage:            http://nonrecursive.org
Stability:           Experimental
Category:            Graphics, Data
Tested-With:         GHC == 6.10.4
Cabal-Version:       >= 1.2
Build-Type:          Simple


Library
  Build-Depends:       base, bytestring
  Exposed-Modules:     Data.WOW.ModelDef, Data.WOW.M2Model, Data.WOW.BLP, Data.WOW.Bone, Data.WOW.Matrix, Data.WOW.Quaternion,
                       Data.WOW.Animated, Data.WOW.DBC, Data.WOW.Creature,
                       Data.WOW.World, Data.WOW.WorldTemplate, Data.WOW.FileSystem, Data.WOW.Utils,
                       Data.WOW.GL.Types, Data.WOW.GL.ResourceLoader, Data.WOW.GL.Mesh, Data.WOW.GL.Texture
  ghc-options:         -Wall

Executable test3
  main-is:             test3.hs
  build-depends:       base, array, containers, bytestring, monads-fd, transformers, filepath, binary, data-binary-ieee754, fclabels, Tensor, vector-space, pcre-light, OpenGL, OpenGLRaw, GLUT, GLURaw, template-haskell, stb-image == 0.1.3, gtk, gtkglext, MaybeT, hdds


